# NexusAI

./: .env.example  .gitignore  README.md  debug_agent.py  debug_imports.py  debug_signature.py  debug_tavily.py  main.py  output.txt  pyproject.toml  requirements.txt
app/agents/: graph.py  simple_agent.py  tools.py
app/api/: api.py  deps.py
app/api/endpoints/: agent.py  chat.py  conversations.py  graph.py  rag.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  chat.py  structured.py
app/services/: llm_service.py  rag_service.py
data/: nexus.db
data/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/auth/: SignUpModal.jsx
frontend/src/components/chat/: ChatInterface.jsx  MessageBubble.jsx
frontend/src/components/landing/: About.jsx  Contact.jsx  Features.jsx  Hero.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/settings/: SettingsModal.jsx
frontend/src/context/: AuthContext.jsx
static/: index.html
